Ported to 1.7